--- a/tbase/src/main/res/layout/activity_search.xml
+++ b/tbase/src/main/res/layout/activity_search.xml
@@ -62,11 +62,12 @@
 
         <ImageView
             android:id="@+id/empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_centerInParent="true"
-            app:srcCompat="@mipmap/search"
-            android:visibility="gone" />
+            app:srcCompat="@mipmap/default_list"
+            android:visibility="gone"
+            />
 
     </RelativeLayout>
 
