--- a/tbase/src/main/res/values/colors.xml
+++ b/tbase/src/main/res/values/colors.xml
@@ -13,6 +13,10 @@
     <color name="colorred">#ff0000</color>
     <color name="coloryellow">#f1a923</color>
 
+    <!-- 页面底色 -->
+    <color name="page_bg_color" >#e1e1e1</color>
+
+
     <!-- 信息 -->
     <color name="color_name">#333333</color>
     <color name="color_content">#666666</color>
@@ -21,7 +25,6 @@
     <!-- 背景色 -->
     <color name="color_bg_fa">#fafafa</color>
     <color name="color_bg_ff">#ffffff</color>
-
     <color name="color_transparent">#00000000</color>
     <color name="color_transparent_half">#66000000</color>
 
@@ -34,7 +37,6 @@
     <color name="textcolor_tishi">#a5abb8</color>
     <color name="textcolor_check">#719BF1</color>
     <color name="textcolor_uncheck">#69748B</color>
-
     <color name="color_zhuse">#5b9ac5</color>
 
     <!-- Button按钮的颜色 -->
