--- a/tbase/src/main/res/layout/layout_defaultpage.xml
+++ b/tbase/src/main/res/layout/layout_defaultpage.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#fafafa"
+    android:background="@color/page_bg_color"
     android:layout_height="match_parent"
     android:gravity="center"
     android:id="@+id/layout_default_all"
-    android:visibility="gone"
     >
 
     <ImageView
@@ -27,6 +26,5 @@
         android:textColor="#666666"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:visibility="gone"
         />
 </RelativeLayout>
