--- a/tbase/src/main/res/values/dimens.xml
+++ b/tbase/src/main/res/values/dimens.xml
@@ -35,7 +35,10 @@
     <dimen name="tswitch_w">180dp</dimen>
     <dimen name="tswitch_h">36dp</dimen>
     <dimen name="tswitch_padding">2dp</dimen>
-    <dimen name="tswitch_tab_space">1dp</dimen>
+
+
+
+
     <!--外边线的宽度-->
     <dimen name="tswitch_outside_w">1dp</dimen>
     <!-- 圆角 -->
@@ -58,12 +61,19 @@
     <dimen name="dp4">4dp</dimen>
     <dimen name="dp5">5dp</dimen>
     <dimen name="dp6">6dp</dimen>
+    <dimen name="dp7">7dp</dimen>
     <dimen name="dp8">8dp</dimen>
+    <dimen name="dp9">9dp</dimen>
     <dimen name="dp10">10dp</dimen>
+    <dimen name="dp11">11dp</dimen>
     <dimen name="dp12">12dp</dimen>
+    <dimen name="dp13">13dp</dimen>
+    <dimen name="dp14">14dp</dimen>
     <dimen name="dp15">15dp</dimen>
     <dimen name="dp16">16dp</dimen>
+    <dimen name="dp17">17dp</dimen>
     <dimen name="dp18">18dp</dimen>
+    <dimen name="dp19">19dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp21">21dp</dimen>
     <dimen name="dp22">22dp</dimen>
@@ -71,17 +81,29 @@
     <dimen name="dp24">24dp</dimen>
     <dimen name="dp25">25dp</dimen>
     <dimen name="dp26">26dp</dimen>
+    <dimen name="dp27">27dp</dimen>
     <dimen name="dp28">28dp</dimen>
+    <dimen name="dp29">29dp</dimen>
     <dimen name="dp30">30dp</dimen>
+    <dimen name="dp31">31dp</dimen>
     <dimen name="dp32">32dp</dimen>
+    <dimen name="dp33">33dp</dimen>
+    <dimen name="dp34">34dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp36">36dp</dimen>
+    <dimen name="dp37">37dp</dimen>
+    <dimen name="dp38">38dp</dimen>
+    <dimen name="dp39">39dp</dimen>
     <dimen name="dp40">40dp</dimen>
+    <dimen name="dp41">41dp</dimen>
     <dimen name="dp42">42dp</dimen>
+    <dimen name="dp43">43dp</dimen>
     <dimen name="dp44">44dp</dimen>
     <dimen name="dp45">45dp</dimen>
     <dimen name="dp46">46dp</dimen>
+    <dimen name="dp47">47dp</dimen>
     <dimen name="dp48">48dp</dimen>
+    <dimen name="dp49">49dp</dimen>
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp55">55dp</dimen>
     <dimen name="dp60">60dp</dimen>
@@ -97,16 +119,32 @@
     <dimen name="dp140">140dp</dimen>
     <dimen name="dp150">150dp</dimen>
     <dimen name="dp160">160dp</dimen>
+    <dimen name="dp170">170dp</dimen>
     <dimen name="dp180">180dp</dimen>
+    <dimen name="dp190">190dp</dimen>
     <dimen name="dp200">200dp</dimen>
+    <dimen name="dp210">210dp</dimen>
     <dimen name="dp220">220dp</dimen>
+    <dimen name="dp230">230dp</dimen>
     <dimen name="dp240">240dp</dimen>
+    <dimen name="dp250">250dp</dimen>
     <dimen name="dp260">260dp</dimen>
+    <dimen name="dp270">270dp</dimen>
     <dimen name="dp280">280dp</dimen>
+    <dimen name="dp290">290dp</dimen>
     <dimen name="dp300">300dp</dimen>
+    <dimen name="dp310">310dp</dimen>
     <dimen name="dp320">320dp</dimen>
+    <dimen name="dp330">330dp</dimen>
+    <dimen name="dp340">340dp</dimen>
+    <dimen name="dp350">350dp</dimen>
+    <dimen name="dp360">360dp</dimen>
+    <dimen name="dp370">370dp</dimen>
+    <dimen name="dp380">380dp</dimen>
+    <dimen name="dp390">390dp</dimen>
+    <dimen name="dp400">400dp</dimen>
 
-    <!-- 字体大小 -->
+    <!-- 字体大小：推荐使用dp值 -->
     <dimen name="sp6">6sp</dimen>
     <dimen name="sp8">8sp</dimen>
     <dimen name="sp10">10sp</dimen>
