--- a/tbase/src/main/res/layout/layout_defaultpage.xml
+++ b/tbase/src/main/res/layout/layout_defaultpage.xml
@@ -31,7 +31,7 @@
     <LinearLayout
         android:id="@+id/layout_default_linearlayout"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@id/layout_default_text"
         ></LinearLayout>
